GUI query manque rapport